[package]
name = "hues"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hues"
path = "src/main.rs"
features = ["mdns"]

[features]
default = ["mdns"]
mdns = ["dep:mdns", "dep:futures-util"]

[dependencies]
futures-util = { version = "0.3.29", optional = true }
mdns = { version = "3.0.0", optional = true }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.35.0", features = ["full"] }
