[package]
name = "hues"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "hues"
path = "src/lib.rs"

[[bin]]
name = "hues"
path = "src/main.rs"
features = ["mdns"]

[[example]]
name = "all"
path = "examples/all.rs"
features = ["mdns"]

[features]
default = ["mdns"]
mdns = ["dep:mdns", "dep:futures-util"]

[dependencies]
futures-util = { version = "0.3.29", optional = true }
json-patch = "1"
log = { version = "0.4", features = ["release_max_level_off"] }
mdns = { version = "3.0.0", optional = true }
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.35.0", features = ["full"] }

[dev-dependencies]
dotenv = "0.15"
