[package]
name = "hues"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "hues"
path = "src/lib.rs"

[[bin]]
name = "hues"
path = "src/main.rs"
required-features = ["mdns", "sse", "streaming"]

[[example]]
name = "all"
required-features = ["mdns", "sse", "streaming"]

[[example]]
name = "listen"
required-features = ["mdns", "sse", "streaming"]

[[example]]
name = "stream"
required-features = ["mdns", "sse", "streaming"]

[features]
default = ["mdns", "sse"]
all = ["mdns", "sse", "streaming"]
mdns = ["dep:mdns", "dep:futures-util"]
sse = ["dep:reqwest-eventsource"]
streaming = ["dep:rustls", "dep:webrtc-dtls", "dep:webrtc-util"]

[dependencies]
futures-util = { version = "0.3.29", optional = true }
json-patch = "1"
log = { version = "0.4", features = ["release_max_level_off"] }
mdns = { version = "3", optional = true }
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
reqwest-eventsource = { version = "0.5", optional = true }
rustls = { version = "0.22", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
webrtc-dtls = { version = "0.8", features = ["pem"], optional = true }
webrtc-util = { version = "0.8", optional = true }

[dev-dependencies]
dotenv = "0.15"
